--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -132,8 +132,7 @@ li:hover {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    /* background-color: white; */
-	background-color: rgb(77, 76, 76);
+    background-color: white;
     font-family: 'syne';
     height: 50em;
     margin: 0;
