--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -152,14 +152,31 @@ li:hover {
 	height: 45rem;
 	background-color: white;
 	border-radius: 10px;
-
 }
 .modal_close {
 	margin: 2% 0% 0% 95%;
 	font-size: 2em;
-	
-
 }
+.modal_title {
+	color: black;
+	margin: 5% 0% -5% 0%;
+}
+.modal_works {
+	margin: 10% 10% 10% 10%;
+	display: grid;
+	grid-gap: 10px;
+	grid-template-columns: repeat(5, 1fr);
+}
+.modal_figure {
+	width: 100%;
+	height: 60%;
+}
+.modal_figure img {
+	width: 7em;
+}
+
+
+
 /* ? Login CSS */
 .main_login {
     display: flex;
