--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -3,312 +3,410 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 /** end reset css**/
 body {
-	max-width: 1140px;
-	margin:auto;
-	font-family: 'Work Sans' ;
-	font-size: 14px;
+  max-width: 1140px;
+  margin: auto;
+  font-family: "Work Sans";
+  font-size: 14px;
 }
 header {
-	display: flex;
-	justify-content: space-between;
-	margin: 50px 0
+  display: flex;
+  justify-content: space-between;
+  margin: 50px 0;
 }
 section {
-	margin: 50px 0
+  margin: 50px 0;
 }
 
-h1{
-	display: flex;
-	flex-direction: column;
-	font-family: 'Syne';
-	font-size: 22px;
-	font-weight: 800;
-	color: #B1663C
+h1 {
+  display: flex;
+  flex-direction: column;
+  font-family: "Syne";
+  font-size: 22px;
+  font-weight: 800;
+  color: #b1663c;
 }
 
 h1 > span {
-	font-family: 'Work Sans';
-	font-size:10px;
-	letter-spacing: 0.1em;
-;
+  font-family: "Work Sans";
+  font-size: 10px;
+  letter-spacing: 0.1em;
 }
 
-h2{
-	font-family: 'Syne';
-	font-weight: 700;
-	font-size: 30px;
-	color: #1D6154
+h2 {
+  font-family: "Syne";
+  font-weight: 700;
+  font-size: 30px;
+  color: #1d6154;
 }
 nav ul {
-	display: flex;
-	align-items: center;
-	list-style-type: none;
-
+  display: flex;
+  align-items: center;
+  list-style-type: none;
 }
 nav li {
-	padding: 0 10px;
-	font-size: 1.2em;
+  padding: 0 10px;
+  font-size: 1.2em;
 }
 
 li:hover {
-	color: #B1663C;
+  color: #b1663c;
 }
 #introduction {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 #introduction figure {
-	flex: 1
+  flex: 1;
 }
 #introduction img {
-	display: block;
-	margin: auto;
-	width: 80%;
+  display: block;
+  margin: auto;
+  width: 80%;
 }
 
 #introduction article {
-	flex: 1
+  flex: 1;
 }
 #introduction h2 {
-	margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 #introduction p {
-	margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
 #portfolio h2 {
-	text-align: center;
-	margin-bottom: 1em;
+  text-align: center;
+  margin-bottom: 1em;
 }
 
 /* ? Modal CSS */
 .modal_button {
-	color: black;
-	font-size: small;
-	text-decoration: none;
-	margin: -10% 0% 0% 2%;
-	letter-spacing: 3px;
+  color: black;
+  font-size: small;
+  text-decoration: none;
+  margin: -10% 0% 0% 2%;
+  letter-spacing: 3px;
 }
 #modal {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: fixed;
-	z-index: 1;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .modal_box {
-	width: 50rem;
-	height: 45rem;
-	background-color: white;
-	border-radius: 10px;
+  width: 50rem;
+  height: auto;
+  background-color: white;
+  border-radius: 10px;
 }
 .modal_close {
-	margin: 2% 0% 0% 95%;
-	font-size: 2em;
+  margin: 2% 0% 0% 95%;
+  font-size: 2em;
 }
 .modal_title {
-	color: black;
-	margin: 5% 0% -5% 0%;
+  color: black;
+  margin: 5% 0% -5% 0%;
 }
 .modal_works {
-	margin: 10% 10% 10% 10%;
-	display: grid;
-	grid-gap: 10px;
-	grid-template-columns: repeat(5, 1fr);
+  margin: 10% 10% 0% 10%;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(5, 1fr);
+  border-bottom: 1px solid #bdbdbd;
+
 }
 .modal_figure {
-	width: 100%;
-	height: 60%;
+  width: 100%;
+  height: 60%;
 }
 .modal_figure img {
-	width: 7em;
+  width: 7em;
 }
-
-
+.modal_submit {
+  margin: 2% 0% 2% 40%;
+  width: 12em;
+  height: 3em;
+  border-radius: 20px;
+  background-color: #1d6154;
+  color: white;
+  font-family: "Syne";
+  border: none;
+}
+.modal_delete {
+  position: absolute;
+  z-index: 1;
+  background-color: black;
+  color: white;
+  width: 1.5em;
+  height: 1em;
+  margin: -10em 0% 0% 5.5em;
+  padding: 5px 0% 5px 0%;
+  text-align: center;
+  border-radius: 5px;
+  font-size: small;
+}
 
 /* ? Login CSS */
 .main_login {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: white;
-    font-family: 'syne';
-    height: 50em;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+  font-family: "syne";
+  height: 50em;
+  margin: 0;
+  padding: 0;
 }
 .login_title {
-    color: #1D6154;
-}   
+  color: #1d6154;
+}
 .login_error_msg {
-	padding: 1% 0% 0% 0%;
-	color: red;
-	text-align: center;
+  padding: 1% 0% 0% 0%;
+  color: red;
+  text-align: center;
 }
 .login_error_msg2 {
-	padding: 1% 0% 0% 0%;
-	color: red;
-	text-align: center;
+  padding: 1% 0% 0% 0%;
+  color: red;
+  text-align: center;
 }
 .login_form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 300px;
-    height: 300px;   
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 300px;
+  height: 300px;
 }
 .login_text {
-    margin-bottom: -1em;
-}   
+  margin-bottom: -1em;
+}
 .login_input {
-    height: 3em;
-    border: none;
-    box-shadow: 0px 2px 2px 2px rgb(149, 149, 149);
+  height: 3em;
+  border: none;
+  box-shadow: 0px 2px 2px 2px rgb(149, 149, 149);
 }
 .login_button {
-    background-color: #1D6154;
-    color: white;
-    height: 3em;
-    border: none;
-    font-family: 'syne';
-    border-radius: 20px;
+  background-color: #1d6154;
+  color: white;
+  height: 3em;
+  border: none;
+  font-family: "syne";
+  border-radius: 20px;
 }
 .login_link {
-    text-align: center;
-    color: #1D6154;
-
+  text-align: center;
+  color: #1d6154;
 }
 .filter {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .button_filter {
-	margin: 1% 1% 1% 1%;
-	padding: 1% 1% 1% 1%;
-	background-color: transparent;
-	color: #1d6154;
-	border: none;
-	border: 1px solid #1d6154;
-	border-radius: 20px;
-	font-weight: bold;
-	font-family: 'Syne';
+  margin: 1% 1% 1% 1%;
+  padding: 1% 1% 1% 1%;
+  background-color: transparent;
+  color: #1d6154;
+  border: none;
+  border: 1px solid #1d6154;
+  border-radius: 20px;
+  font-weight: bold;
+  font-family: "Syne";
 }
 .button_filter:hover {
-	background-color: #1d6154;
-	color: white;
+  background-color: #1d6154;
+  color: white;
 }
 .gallery {
-	width: 100%;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
 }
 
 .gallery img {
-	width: 100%;
-
+  width: 100%;
 }
 
 #contact {
-	width: 50%;
-margin: auto;
+  width: 50%;
+  margin: auto;
 }
 #contact > * {
-	text-align: center;
-
+  text-align: center;
 }
-#contact h2{
-	margin-bottom: 20px;
+#contact h2 {
+  margin-bottom: 20px;
 }
 #contact form {
-	text-align: left;
-	margin-top:30px;
-	display: flex;
-	flex-direction: column;
+  text-align: left;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 #contact input {
-	height: 50px;
-	font-size: 1.2em;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  height: 50px;
+  font-size: 1.2em;
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 #contact label {
-	margin: 2em 0 1em 0;
+  margin: 2em 0 1em 0;
 }
 #contact textarea {
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+  border: none;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"]{
-	font-family: 'Syne';
-	font-weight: 700;
-	color: white;
-	background-color: #1D6154;
-	margin : 2em auto ;
-	width: 180px;
-	text-align: center;
-	border-radius: 60px ;
+input[type="submit"] {
+  font-family: "Syne";
+  font-weight: 700;
+  color: white;
+  background-color: #1d6154;
+  margin: 2em auto;
+  width: 180px;
+  text-align: center;
+  border-radius: 60px;
 }
 
 footer nav ul {
-	display: flex;
-	justify-content: flex-end;
-	margin: 2em
+  display: flex;
+  justify-content: flex-end;
+  margin: 2em;
 }
-
