--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -226,6 +226,7 @@ li:hover {
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
 }
+/* ? Modal galery */
 .modal_box {
   width: 50rem;
   height: auto;
@@ -246,10 +247,6 @@ li:hover {
   grid-gap: 10px;
   grid-template-columns: repeat(5, 1fr);
   border-bottom: 1px solid #bdbdbd;
-}
-.modal_upload {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
 }
 .modal_figure {
   width: 100%;
@@ -281,6 +278,80 @@ li:hover {
   border-radius: 5px;
   font-size: small;
 }
+/* ? Modal upload */
+.modal_upload {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "syne";
+  border-bottom: 1px solid #cccccc;
+  margin: 0% 25% 0% 25%;
+}
+.fa-arrow-left {
+  display: flex;
+}
+.modal-form-photo {
+  background-color: #e8f1f6;
+  display: flex;
+  flex-direction: column;
+  width: 30em;
+  height: 15em;
+  
+}
+.modal-form-photo-icon {
+  color: #cbd6dc ;
+  text-align: center;
+  font-size: 500%;
+  margin: 5% 0% 0% 0%;
+
+}
+.modal-form-photo-label {
+  text-align: center;
+  background-color: #cbd6dc;
+  color: #4a7a95;
+  margin: 2% 30% 0% 30%;
+  padding: 2% 0% 2% 0%;
+  height: 1em;
+  border-radius: 20px;
+}
+.modal-form-photo-input {
+  display: none;
+}
+.modal-form-photo-text {
+  text-align: center;
+  margin: 2% 0% 5% 0%;
+  color: gray;
+  font-size: smaller;
+
+}
+.modal-form-title {
+  display: flex;
+  flex-direction: column;
+  margin: 5% 0% 5% 0%;
+}
+.modal-form-title-input {
+  border-style: unset;
+  box-shadow: 0px 2px 2px 2px rgb(210, 210, 210);
+  height: 3em;
+  margin: 1% 0% 0% 0%;
+}
+.modal-form-category {
+  display: flex;
+  flex-direction: column;
+  margin: 10% 0% 5% 0%;
+  
+}
+.modal-form-category-select{
+  border-style: unset;
+  box-shadow: 0px 2px 2px 2px rgb(210, 210, 210);
+  height: 3em;
+  margin: 1% 0% 0% 0%;
+}
+/* .modal-form-underline {
+  background-color: #1d6154;
+  text-decoration: underline;
+  width: 10em;
+} */
 
 /* ? Login CSS */
 .main_login {
