--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -347,11 +347,12 @@ li:hover {
   height: 3em;
   margin: 1% 0% 0% 0%;
 }
-/* .modal-form-underline {
-  background-color: #1d6154;
-  text-decoration: underline;
-  width: 10em;
-} */
+.fa-arrow-left {
+  font-size: 200%;
+  position: absolute;
+  top: 5em;
+  left: 10em;
+}
 
 /* ? Login CSS */
 .main_login {
