--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -296,7 +296,6 @@ li:hover {
   flex-direction: column;
   width: 30em;
   height: 15em;
-  
 }
 .modal-form-photo-icon {
   color: #cbd6dc ;
@@ -322,7 +321,11 @@ li:hover {
   margin: 2% 0% 5% 0%;
   color: gray;
   font-size: smaller;
-
+}
+.modal-form-photo-previewImg {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
 }
 .modal-form-title {
   display: flex;
