management for form error

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -365,6 +365,12 @@ li:hover {
   top: 5em;
   left: 10em;
 }
+.modal-form-alert {
+  color: red;
+  text-align: center;
+  margin: 2% 0% 2% 0%;
+
+}
 
 /* ? Login CSS */
 .main_login {
