auto refresh on form submit

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -265,6 +265,9 @@ li:hover {
   font-family: "Syne";
   border: none;
 }
+.modal_submit_return {
+  padding: 1.5% 0% 0% 2%;
+}
 .modal_delete {
   position: absolute;
   z-index: 1;
